# Appflowy-MCP-Server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  KNOWLEDGE.md  LICENSE  README.md  SECURITY.md  deploy_vps.sh  docker-compose.yaml  google_oauth.py  pyproject.toml  requirements.txt  server.py  test_server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
