[project]
name = "appflowy-mcp-server"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for AppFlowy Cloud — read, build, and edit your workspace from AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "appflowy-mcp-server contributors" }]
keywords = ["mcp", "model-context-protocol", "appflowy", "ai-agents", "llm", "fastmcp"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp",
    "httpx",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "pycrdt",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.urls]
Homepage = "https://github.com/Rahulk644/appflowy-mcp-server"
Repository = "https://github.com/Rahulk644/appflowy-mcp-server"
Issues = "https://github.com/Rahulk644/appflowy-mcp-server/issues"

[tool.ruff]
line-length = 88
target-version = "py310"
